[package]
name = "flyconomy"
version = "0.1.0"
edition = "2021"
description = "A simple economic simulation game about managing an airline with real-world data."
authors = ["Christian <chriamue@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/chriamue/flyconomy"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.docs.rs]
features = ["ai"]

[features]
default = ["ai"]
ai = ["rurel"]
rayon = ["dep:rayon"]
bdd = []              # cucumber tests

[dependencies]
bevy = { version = "0.10.1", default-features = false, features = [
    "bevy_asset",
    "jpeg",
    "png",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_pbr",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "x11",
] }
bevy_egui = { version = "0.20.3" }
bevy_mod_picking = { version = "0.13.0", default-features = false, features = [
    "selection",
    "backend_raycast",
    "backend_egui",
] }
bevy_obj = { version = "0.10.1" }
bevy_panorbit_camera = { version = "0.5.2", features = ["bevy_egui"] }
bevy_polyline = { version = "0.6.0" }
chrono = "0.4"
csv = "1.2.2"
geo = "0.25.0"
rayon = { version = "1.7.0", optional = true }
rurel = { git = "https://github.com/chriamue/rurel.git", branch = "dqn", version = "0.4.0", features = [
    "dqn",
], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
strsim = "0.10.0"
structopt = "0.3.26"
strum = { version = "0.25", features = ["derive"] }
thiserror = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    'Blob',
    'Url',
    'Window',
    'HtmlAnchorElement',
] }
js-sys = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
approx = "0.5"
criterion = { version = "0.5.1", default-features = false }
cucumber = { version = "0.20.0" }
tokio = { version = "1.29", features = ["rt", "rt-multi-thread", "macros"] }

[[bench]]
name = "analytics_benches"
harness = false

[[bench]]
name = "algorithm_benches"
harness = false

[[test]]
name = "bdd_tests"
required-features = ["bdd"]
harness = false
