[package]
name = "flyconomy"
version = "0.1.3"
edition = "2021"
description = "A simple economic simulation game about managing an airline with real-world data."
authors = ["Christian <chriamue@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/chriamue/flyconomy"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.docs.rs]
features = ["ai"]

[features]
default = ["ai"]
ai = ["rurel"]
web3 = ["flyconomy_contracts_client"]
rayon = ["dep:rayon"]
bdd = []                              # cucumber tests

[dependencies]
async-std = "1.12.0"
bevy = { version = "0.13.0", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_pbr",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "jpeg",
    "ktx2",
    "png",
    "tonemapping_luts",
    "webgl2",
    "x11",
    "zstd",
] }
egui_plot = { version = "0.26" }
bevy_egui = { version = "0.25" }
bevy_eventlistener = "0.7.0"
bevy_mod_picking = { version = "0.18.2", default-features = false, features = [
    "selection",
    "backend_raycast",
    "backend_egui",
] }
bevy_obj = { version = "0.13" }
bevy_panorbit_camera = { version = "0.16.1", features = ["bevy_egui"] }
chrono = "0.4"
csv = "1.3.0"
geo = "0.28"
log = "0.4.21"
rayon = { version = "1.9.0", optional = true }
rurel = { git = "https://github.com/milanboers/rurel", version = "0.6.0", features = [
    "dqn",
], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
strsim = "0.11.0"
structopt = "0.3.26"
strum = { version = "0.26", features = ["derive"] }
thiserror = "1.0"
flyconomy_contracts_client = { path = "contracts/flyconomy_contracts_client", default-features = false, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    'Blob',
    'Url',
    'Window',
    'HtmlAnchorElement',
] }
js-sys = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }
uuid = { version = "1.16.0", features = ["v4", "rng-getrandom", "serde"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
approx = "0.5"
criterion = { version = "0.5.1", default-features = false }
cucumber = { version = "0.20.2" }
tokio = { version = "1.36", features = ["rt", "rt-multi-thread", "macros"] }

[[bench]]
name = "analytics_benches"
harness = false

[[bench]]
name = "algorithm_benches"
harness = false

[[test]]
name = "bdd_tests"
required-features = ["bdd"]
harness = false
