[package]
name = "flyconomy_attractions"
version = "0.1.0"
edition = "2021"
description = "Smart Contract for Flyconomy Attractions"
authors = ["Christian <chriamue@gmail.com>"]
license = "MIT"

[lib]
name = "flyconomy_attractions"
path = "src/lib.rs"

[dependencies]
ink = { version = "4.3.0", default-features = false }
openbrush = { git = "https://github.com/Brushfam/openbrush-contracts", tag = "4.0.0-beta.1", default-features = false, features = ["psp34"] }
scale = { package = "parity-scale-codec", version = "3.6", default-features = false, features = ["derive"] }
scale-info = { version = "2.9", default-features = false, features = ["derive"] }

[dev-dependencies]
ink_env = { version = "4.3.0", default-features = false }
ink_e2e = { version = "4.3.0" }
test_helpers = { path = "../test_helpers", default-features = false }
tokio = { version = "1.32.0", default-features = false, features = ["full"] }

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "openbrush/std",
]
ink-as-dependency = []
e2e-tests = []

[profile.dev]
codegen-units = 16
lto = false
overflow-checks = false