[package]
name = "flyconomy_bases"
version = "0.1.0"
edition = "2021"
description = "Contracts for the Flyconomy project"
authors = ["Christian <chriamue@gmail.com>"]
license = "MIT"
readme = "README.md"

[dependencies]
ink = { version = "4.1.0", default-features = false }
openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts/", tag = "3.1.1", default-features = false, features = ["psp34", "ownable"] }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
ink_env = { version = "4.1.0", default-features = false }
ink_e2e = { version = "4.1.0" }
test_helpers = { git = "https://github.com/727-Ventures/openbrush-contracts/", tag = "3.1.1", default-features = false }
tokio = { version = "1.27.0", default-features = false, features = ["full"] }

[lib]
name = "flyconomy_bases"
path = "lib.rs"

[[example]]
name = "example"
path = "example.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    # These dependencies
    "openbrush/std",
]
ink-as-dependency = []
e2e-tests = []

[profile.dev]
codegen-units = 16
