[package]
name = "flyconomy_contracts_app"
version = "0.1.0"
edition = "2021"
description = "Flyconomy Contracts App, shows the contracts attractions on a map"

[dependencies]
anyhow = "1.0"
wasm-bindgen = "0.2"
yew = { version = "0.21.0", features = ["csr"] }
flyconomy_contracts_client = { path = "../flyconomy_contracts_client", default-features = false }
serde = "1.0.188"
serde_json = "1.0.107"
