[package]
name = "flyconomy_contracts_app"
version = "0.1.0"
edition = "2021"
description = "Flyconomy Contracts App, shows the contracts attractions on a map"

[dependencies]
anyhow = "1.0"
wasm-bindgen = "0.2"
yew = { version = "0.21.0", features = ["csr"] }
flyconomy_contracts_client = { path = "../flyconomy_contracts_client", default-features = false }

leaflet = "0.2"
gloo-console = "0.2"
gloo-utils = "0.1"

[dependencies.web-sys]
version = "0.3"
features = ["HtmlAnchorElement", "console", "Window", "Document"]