[package]
name = "flyconomy-contracts-client"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.73"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
web3 = "0.19"
