[package]
name = "flyconomy-contracts-client"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.73"
dotenv = { version = "0.15.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = { version = "0.3", optional = true }
thiserror = "1.0"
tokio = { version = "1", features = ["full"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
web3 = { version = "0.19", default-features = false, features = [
    "ws-tls-async-std",
] }
[target.'cfg(target_arch = "wasm32")'.dependencies]
web3 = { version = "0.19", default-features = false, features = ["wasm", "http-tls"] }

[features]
default = ["cli"]
cli = ["dotenv", "structopt", "tokio"]
