[package]
name = "flyconomy_token"
version = "0.1.0"
edition = "2021"
description = "Contracts for the Flyconomy project"
authors = ["Christian <chriamue@gmail.com>"]
license = "MIT"
readme = "README.md"

[dependencies]
ink = { version = "4.1.0", default-features = false }
openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts/", tag = "3.1.1", default-features = false, features = ["psp22", "ownable"] }

scale = { package = "parity-scale-codec", version = "3.6.3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

ink_env = { version = "4.1.0", default-features = false }
ink_e2e = { version = "~4.1.0", default-features = false }
tokio = { version = "1.27.0", default-features = false, features = ["full"] }

[lib]
name = "flyconomy_token"
path = "lib.rs"
crate-type = [
    "cdylib",
    "rlib",
]

[[bin]]
name = "flyconomy_token"
path = "main.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "openbrush/std",
]
ink-as-dependency = []
